<resources>
    <string name="app_name">MyMood</string>
    <!--DataOrganizer.java-->
    <string name="data_organize_saving_message">C\'est un nouveau jour, une nouvelle humeur (-:</string>
    <!--Comment dialog-->
    <string name="alert_dialog_title">Ajoutez un commentaire à votre humeur du jour :</string>
    <string name="toast_comment_dialog_save">Votre message a été enregistré</string>
    <string name="toast_comment_dialog_empty">Commentaire vide</string>
    <string name="comment">commentaire...</string>
    <string name="save">Sauvegard</string>
    <string name="cancel">Annuler</string>
    <string name="what_s_on_your_mind_today">Ecrivez votre commentaire:</string>
    <!--Share dialog-->
    <string name="share_dialog_text">Choisissez un client pour partager votre humeur</string>
    <string name="email_body_message">Ecrivez votre message ici...</string>

    <!--MainActivity-->
    <string name="above_superHappy">We are glad you are happy, but no more moods above that one</string>
    <string name="below_sad">We are sorry, but no more moods below that one</string>

    <string name="happy_email_btn">happy_email_btn</string>
    <string name="_7_days_ago">7 days ago:</string>
    <string name="view_comment_btn">view_comment_btn</string>
    <string name="_6_days_ago">6 days ago:</string>
    <string name="fragment_layout_6_days_ago">fragment_layout_6_days_ago</string>
    <string name="days_ago_text">days ago</string>
    <string name="send">Envoyer</string>
    <string name="example_example_com">example@example.com</string>
    <string name="share_your_mood_with_a_friend"></string>

</resources>
